
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi_rs_image_test"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { version = "0.25.6", features = ["avif-native"]}
napi = {version = "3.0.0", features = ["tokio_rt"]}
napi-derive = "3.0.0"
reqwest = { version = "0.12.23", default-features = false, features = ["http2", "rustls-tls"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
